server-cluster/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nginx-load-test
  name: nginx-load-test
spec:
  replicas: 4
  selector:
    matchLabels:
      app: nginx-load-test
  template:
    metadata:
      annotations:
        kubernetes.io/egress-bandwidth: 10M
      labels:
        app: nginx-load-test
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app.kubernetes.io/name
                operator: In
                values:
                - ingress-nginx
            namespaces:
            - ingress-nginx
            - default
            topologyKey: kubernetes.io/hostname
      containers:
      - image: nginx
        imagePullPolicy: Always
        name: nginx
        ports:
        - containerPort: 80
          name: http
          protocol: TCP
        volumeMounts:
        - mountPath: /etc/nginx/nginx.conf
          name: nginx-load-conf
          subPath: nginx.conf
        - mountPath: /etc/nginx/conf.d
          name: app-conf
        - mountPath: /usr/share/nginx/bin
          name: binary-volume
      volumes:
      - configMap:
          defaultMode: 420
          name: binary
        name: binary-volume
      - configMap:
          defaultMode: 420
          name: nginx-load-conf
        name: nginx-load-conf
      - configMap:
          defaultMode: 420
          name: nginx-load-app-conf
        name: app-conf
