server-cluster/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  # internalTrafficPolicy: Local
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: nginx-load-test
