server-cluster/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: load-test
  namespace: default
spec:
  defaultBackend:
    service:
      name: nginx-service
      port:
        number: 80
  ingressClassName: nginx
